--- a/CG_practice21-23/CG_practice21-23.vcxproj.filters
+++ b/CG_practice21-23/CG_practice21-23.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CG_practice21-23.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
