--- a/CG_practice21-23/CG_practice21-23.vcxproj.filters
+++ b/CG_practice21-23/CG_practice21-23.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="GLGL.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Cube.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment.glsl">
@@ -35,6 +38,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="header.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Cube.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
