--- a/CG_practice21-23/CG_practice21-23.vcxproj.filters
+++ b/CG_practice21-23/CG_practice21-23.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Ball.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Robot.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment.glsl">
@@ -53,6 +56,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Ball.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Robot.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
