Light를 클래스로 따로 뺌

--- a/CG_practice21-23/CG_practice21-23.vcxproj
+++ b/CG_practice21-23/CG_practice21-23.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Cube.h" />
     <ClInclude Include="GLGL.h" />
     <ClInclude Include="header.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Mountain.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Sphere.h" />
