--- a/CG_practice21-23/CG_practice21-23.vcxproj
+++ b/CG_practice21-23/CG_practice21-23.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="GLGL.h" />
     <ClInclude Include="header.h" />
