로봇 가져오기2

--- a/CG_practice21-23/CG_practice21-23.vcxproj
+++ b/CG_practice21-23/CG_practice21-23.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="GLGL.cpp" />
     <ClCompile Include="header.cpp" />
